add swagger and check status
